tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__each_tick-3.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"changes\",\n    move_actions: actions.map.get(&manager.validator()),\n    jump_actions: actions.map.get(&manager.validator()),\n    talk_actions: actions.map.get(&manager.validator()),\n}"

---
SnapshotResult {
    tag: "changes",
    current_tick: 1,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 2,
                ty: EachTick {
                    start: 0,
                    end: 2,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
