tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__each_tick-6.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"changes\",\n    move_actions: actions.map.get(&manager.validator()),\n    jump_actions: actions.map.get(&manager.validator()),\n    talk_actions: actions.map.get(&manager.validator()),\n}"

---
SnapshotResult {
    tag: "changes",
    current_tick: 4,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: End {
                    start: 0,
                    end: 4,
                },
            },
        ],
    ),
    jump_actions: Some(
        [
            Action {
                raw: JumpState,
                entity_id: 1,
                ty: Start {
                    start: 4,
                    end: 7,
                    each: true,
                },
            },
        ],
    ),
    talk_actions: None,
}
