tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__each_tick.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"changes\",\n    move_actions: actions.map.get(&manager.validator()),\n    jump_actions: actions.map.get(&manager.validator()),\n    talk_actions: actions.map.get(&manager.validator()),\n}"

---
SnapshotResult {
    tag: "changes",
    current_tick: 0,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: Start {
                    start: 0,
                    end: 4,
                    each: false,
                },
            },
            Action {
                raw: MoveState,
                entity_id: 2,
                ty: Start {
                    start: 0,
                    end: 2,
                    each: true,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
